--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+0.3.10 - Feb 05th 2026
+=====================
+
+Changes since 0.3.9
+
+- Update librest dependency to 0.10.2.
+- Fix race condition with tests
+- New Translations:
+        * Korean (Seong-ho Cho)
+        * Hindi ()
+        * Bulgarian ()
+        * Cornish (Flynn Peck)
+- Updated Translations:
+        * Russian (Sergej A)
+
 0.3.9 - Aug 08th 2022
 =====================
 
